--- a/Script.ipynb
+++ b/Script.ipynb
@@ -506,9 +506,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from Models import multi_unet_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      " input_1 (InputLayer)           [(None, 256, 256, 3  0           []                               \n",
+      "                                )]                                                                \n",
+      "                                                                                                  \n",
+      " conv2d (Conv2D)                (None, 256, 256, 16  448         ['input_1[0][0]']                \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " dropout (Dropout)              (None, 256, 256, 16  0           ['conv2d[0][0]']                 \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_1 (Conv2D)              (None, 256, 256, 16  2320        ['dropout[0][0]']                \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " max_pooling2d (MaxPooling2D)   (None, 128, 128, 16  0           ['conv2d_1[0][0]']               \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_2 (Conv2D)              (None, 128, 128, 32  4640        ['max_pooling2d[0][0]']          \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " dropout_1 (Dropout)            (None, 128, 128, 32  0           ['conv2d_2[0][0]']               \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_3 (Conv2D)              (None, 128, 128, 32  9248        ['dropout_1[0][0]']              \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " max_pooling2d_1 (MaxPooling2D)  (None, 64, 64, 32)  0           ['conv2d_3[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_4 (Conv2D)              (None, 64, 64, 64)   18496       ['max_pooling2d_1[0][0]']        \n",
+      "                                                                                                  \n",
+      " dropout_2 (Dropout)            (None, 64, 64, 64)   0           ['conv2d_4[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_5 (Conv2D)              (None, 64, 64, 64)   36928       ['dropout_2[0][0]']              \n",
+      "                                                                                                  \n",
+      " max_pooling2d_2 (MaxPooling2D)  (None, 32, 32, 64)  0           ['conv2d_5[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_6 (Conv2D)              (None, 32, 32, 128)  73856       ['max_pooling2d_2[0][0]']        \n",
+      "                                                                                                  \n",
+      " dropout_3 (Dropout)            (None, 32, 32, 128)  0           ['conv2d_6[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_7 (Conv2D)              (None, 32, 32, 128)  147584      ['dropout_3[0][0]']              \n",
+      "                                                                                                  \n",
+      " max_pooling2d_3 (MaxPooling2D)  (None, 16, 16, 128)  0          ['conv2d_7[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_8 (Conv2D)              (None, 16, 16, 256)  295168      ['max_pooling2d_3[0][0]']        \n",
+      "                                                                                                  \n",
+      " dropout_4 (Dropout)            (None, 16, 16, 256)  0           ['conv2d_8[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_9 (Conv2D)              (None, 16, 16, 256)  590080      ['dropout_4[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_transpose (Conv2DTransp  (None, 32, 32, 128)  131200     ['conv2d_9[0][0]']               \n",
+      " ose)                                                                                             \n",
+      "                                                                                                  \n",
+      " concatenate (Concatenate)      (None, 32, 32, 256)  0           ['conv2d_transpose[0][0]',       \n",
+      "                                                                  'conv2d_7[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_10 (Conv2D)             (None, 32, 32, 128)  295040      ['concatenate[0][0]']            \n",
+      "                                                                                                  \n",
+      " dropout_5 (Dropout)            (None, 32, 32, 128)  0           ['conv2d_10[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_11 (Conv2D)             (None, 32, 32, 128)  147584      ['dropout_5[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_transpose_1 (Conv2DTran  (None, 64, 64, 64)  32832       ['conv2d_11[0][0]']              \n",
+      " spose)                                                                                           \n",
+      "                                                                                                  \n",
+      " concatenate_1 (Concatenate)    (None, 64, 64, 128)  0           ['conv2d_transpose_1[0][0]',     \n",
+      "                                                                  'conv2d_5[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_12 (Conv2D)             (None, 64, 64, 64)   73792       ['concatenate_1[0][0]']          \n",
+      "                                                                                                  \n",
+      " dropout_6 (Dropout)            (None, 64, 64, 64)   0           ['conv2d_12[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_13 (Conv2D)             (None, 64, 64, 64)   36928       ['dropout_6[0][0]']              \n",
+      "                                                                                                  \n",
+      " conv2d_transpose_2 (Conv2DTran  (None, 128, 128, 32  8224       ['conv2d_13[0][0]']              \n",
+      " spose)                         )                                                                 \n",
+      "                                                                                                  \n",
+      " concatenate_2 (Concatenate)    (None, 128, 128, 64  0           ['conv2d_transpose_2[0][0]',     \n",
+      "                                )                                 'conv2d_3[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_14 (Conv2D)             (None, 128, 128, 32  18464       ['concatenate_2[0][0]']          \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " dropout_7 (Dropout)            (None, 128, 128, 32  0           ['conv2d_14[0][0]']              \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_15 (Conv2D)             (None, 128, 128, 32  9248        ['dropout_7[0][0]']              \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_transpose_3 (Conv2DTran  (None, 256, 256, 16  2064       ['conv2d_15[0][0]']              \n",
+      " spose)                         )                                                                 \n",
+      "                                                                                                  \n",
+      " concatenate_3 (Concatenate)    (None, 256, 256, 32  0           ['conv2d_transpose_3[0][0]',     \n",
+      "                                )                                 'conv2d_1[0][0]']               \n",
+      "                                                                                                  \n",
+      " conv2d_16 (Conv2D)             (None, 256, 256, 16  4624        ['concatenate_3[0][0]']          \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " dropout_8 (Dropout)            (None, 256, 256, 16  0           ['conv2d_16[0][0]']              \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_17 (Conv2D)             (None, 256, 256, 16  2320        ['dropout_8[0][0]']              \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      " conv2d_18 (Conv2D)             (None, 256, 256, 32  544         ['conv2d_17[0][0]']              \n",
+      "                                )                                                                 \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 1,941,632\n",
+      "Trainable params: 1,941,632\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "IMG_HEIGHT = train_images.shape[1]\n",
     "IMG_WIDTH  = train_images.shape[2]\n",
@@ -520,6 +650,31 @@
     "model = get_model()\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "24/24 [==============================] - 106s 4s/step - loss: 2.9312 - accuracy: 0.1987\n",
+      "Epoch 2/3\n",
+      "24/24 [==============================] - 100s 4s/step - loss: 2.3884 - accuracy: 0.2700\n",
+      "Epoch 3/3\n",
+      "24/24 [==============================] - 98s 4s/step - loss: 1.9686 - accuracy: 0.3696\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(train_images, train_masks_encoded, \n",
+    "                    batch_size = 16, \n",
+    "                    verbose=1, \n",
+    "                    epochs=3)"
    ]
   }
  ],
