--- a/Script.ipynb
+++ b/Script.ipynb
@@ -483,6 +483,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.kaggle.com/code/vbookshelf/cnn-how-to-use-160-000-images-without-crashing\n",
+    "# datagen = ImageDataGenerator(rescale=1.0/255)\n",
+    "\n",
+    "# train_gen = datagen.flow_from_directory(train_path,\n",
+    "#                                         target_size=(IMAGE_SIZE,IMAGE_SIZE),\n",
+    "#                                         batch_size=train_batch_size,\n",
+    "#                                         class_mode='categorical')\n",
+    "\n",
+    "# val_gen = datagen.flow_from_directory(valid_path,\n",
+    "#                                         target_size=(IMAGE_SIZE,IMAGE_SIZE),\n",
+    "#                                         batch_size=val_batch_size,\n",
+    "#                                         class_mode='categorical')\n",
+    "\n",
+    "# # Note: shuffle=False causes the test dataset to not be shuffled\n",
+    "# test_gen = datagen.flow_from_directory(valid_path,\n",
+    "#                                         target_size=(IMAGE_SIZE,IMAGE_SIZE),\n",
+    "#                                         batch_size=1,\n",
+    "#                                         class_mode='categorical',\n",
+    "#                                         shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
